oxiplate-derive/tests/crates/unreachable/tests/broken/unparseable-input.stderr
error: expected identifier
 --> tests/broken/unparseable-input.rs:3:10
  |
3 | #[derive(Oxiplate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Oxiplate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `UnreachableUnparseableInput` doesn't implement `std::fmt::Display`
 --> tests/broken/unparseable-input.rs:8:30
  |
8 |     assert_eq!(format!("{}", UnreachableUnparseableInput), "Hello world!");
  |                         --   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `UnreachableUnparseableInput` cannot be formatted with the default formatter
  |                         |
  |                         required by this formatting parameter
  |
help: the trait `std::fmt::Display` is not implemented for `UnreachableUnparseableInput`
 --> tests/broken/unparseable-input.rs:5:1
  |
5 | struct UnreachableUnparseableInput;
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = note: in format strings you may be able to use `{:?}` (or {:#?} for pretty-print) instead
  = note: this error originates in the macro `$crate::__export::format_args` which comes from the expansion of the macro `format` (in Nightly builds, run with -Z macro-backtrace for more info)
